[package]
name = "tuib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17"
crossterm = "0.23"
run_script = "^0.9.0"
log = "0.4"
tui-logger = "0.7"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
